# tdd-training-add-ons

./: .gitignore  LICENSE  README.md
docker/: Dockerfile  docker-compose.yml
examples/: CMakeLists.txt  examples.md
examples/hal-spi/Drivers/STM32F2xx_HAL_Driver/Inc/: stm32f2xx_hal_def.h  stm32f2xx_hal_dma.h
examples/hal-spi/Drivers/STM32F2xx_HAL_Driver/Src/: stm32f2xx_hal_spi.c
examples/hal-spi/Inc/: stm32f2xx_hal_conf.h
examples/hal-spi/doubles/: core_cm3.h  fakes-spi.c  fakes-spi.h  stm32f205xx.h
examples/hal-spi/tests/: CMakeLists.txt  Gcc32BitToolchain.cmake  tst_hal_spi.cpp
examples/incompatible-c-cpp/src/: ringbuffer.c  ringbuffer.h
examples/incompatible-c-cpp/tst/: CMakeLists.txt  test_incompatible-c-cpp.cpp
examples/mock-spi/Drivers/STM32F2xx_HAL_Driver/Inc/: stm32f2xx_hal_spi.h
examples/mock-spi/Drivers/STM32F2xx_HAL_Driver/Src/: stm32f2xx_hal_spi.c
examples/mock-spi/Master/Inc/: stm32f2xx_hal_conf.h
examples/mock-spi/doubles/: stm32f205xx.h
examples/mock-spi/tests/: CMakeLists.txt  tst_full_duplex_spi.cpp
examples/qml-keypad/: CMakeLists.txt
examples/qml-keypad/imports/: CMakeLists.txt
examples/qml-keypad/imports/src/: CMakeLists.txt
examples/qml-keypad/imports/src/EmUse/Controls/: CMakeLists.txt  Keypad.qml
examples/qml-keypad/imports/tests/: CMakeLists.txt  tst_keypad.cpp
examples/qml-keypad/imports/tests/keypad/: CMakeLists.txt  tst_enter_number.qml
examples/qml-keypad/main/: CMakeLists.txt  main.cpp  main.qml
examples/qml-keypad/src/: CMakeLists.txt  Keypad.qml  main.cpp  main.qml  qml.qrc
examples/qml-keypad/src/EmUse/Controls/: Keypad.qml
examples/qml-keypad/tests/: CMakeLists.txt  KeypadFixture.qml  tst_enter_number.qml  tst_keypad.cpp  tst_keypad.qrc
starter-kits/google-test/: README.md
starter-kits/google-test/testing-c/: CMakeLists.txt
starter-kits/google-test/testing-c/MyFirstTest/: CMakeLists.txt  main.cpp  my_first_test.cpp
starter-kits/google-test/testing-c/MyFirstUnit/: CMakeLists.txt  my_first_test_for_first_unit.cpp  my_second_test_for_first_unit.cpp
starter-kits/google-test/testing-c/MySecondUnit/: my_first_test_for_second_unit.cpp
starter-kits/googletest/: .gitignore  README.md  setup-googletest
starter-kits/googletest/testing-c/: CMakeLists.txt
starter-kits/googletest/testing-c/MyFirstUnit/: CMakeLists.txt  my_first_test_for_first_unit.cpp  my_second_test_for_first_unit.cpp
starter-kits/googletest/testing-c/MySecondUnit/: CMakeLists.txt
starter-kits/googletest/testing-c/my_first_test/: CMakeLists.txt  my_first_test.cpp
starter-kits/googletest/testing-c/ringbuffer/: CMakeLists.txt  test_ringbuffer.cpp
starter-kits/googletest/tests/my_first_test/: CMakeLists.txt  my_first_test.cpp
starter-kits/qttest/: setup-qttest
starter-kits/qttest/testing-cpp/: CMakeLists.txt
starter-kits/qttest/testing-cpp/MyFirstTest/: CMakeLists.txt  MyFirstTest.cpp
starter-kits/qttest/tests/: CMakeLists.txt
starter-kits/qttest/tests/MyFirstTest/: MyFirstTest.cpp
starter-kits/src-c/ringbuffer/: ringbuffer.c  ringbuffer.h
